--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+font-kit = "0.11.0"
 num-bigint = "0.4.4"
 sfml = { version = "0.20.0", features = ["graphics"] }
