--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 font-kit = "0.11.0"
+genawaiter = "0.99.1"
 num-bigint = "0.4.4"
 sfml = { version = "0.20.0", features = ["graphics"] }
