--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,12 @@ edition = "2021"
 
 [dependencies]
 async-recursion = "1.0.5"
-font-kit = "0.11.0"
 genawaiter = "0.99.1"
 line-span = "0.1.5"
 num-bigint = "0.4.4"
-sfml = { version = "0.20.0", features = ["graphics"] }
+console_error_panic_hook = "0.1.7"
+wasm-bindgen = "0.2"
+web-sys = {version = "0.3.65", features = ["console", "Window", "Document", "Element"]}
+
+[lib]
+crate-type = ["cdylib"]
