--- a/.github/workflows/build-wasm.yml
+++ b/.github/workflows/build-wasm.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Install Rust
         run: |
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
-          rustup uupdate
+          rustup update
       - name: Install 'wasm-pack'
         run: cargo install wasm-pack
       - name: Build Wasm
