--- a/.github/workflows/build-wasm.yml
+++ b/.github/workflows/build-wasm.yml
@@ -31,6 +31,9 @@ jobs:
         uses: actions/configure-pages@v3
       - name: Install Rust
         uses: actions-rs/toolchain@v1.0.6
+        with:
+          profile: minimal
+          toolchain: stable
       - name: Install 'wasm-pack'
         run: cargo install wasm-pack
       - name: Build Wasm
