--- a/.github/workflows/build-wasm.yml
+++ b/.github/workflows/build-wasm.yml
@@ -37,9 +37,11 @@ jobs:
       - name: Install 'wasm-pack'
         run: cargo install wasm-pack
       - name: Build code
-        run: wasm-pack build --target web
+        run: wasm-pack build --target web --release --no-pack -d site/pkg
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
+        with:
+          path: site/
 
   # Deployment job
   deploy:
